--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="cardbox p-5 rounded-5">
         <div class="row ">
           <div class="col my-3">
-            <a href="./A05/inside.php">
+            <a href="./A05/index.php">
               <div class="card p-1 text-center rounded-5 actbtn">
                 <div class="h3">Activity: A05</div>
               </div>
