--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
 
           <div class="col my-3">
-            <a href="">
+            <a href="./F01/home.html">
               <div class="card p-1 text-center rounded-5 actbtn">
                 <div class="h3">Activity: WIP</div>
               </div>
