--- a/F01/cg.html
+++ b/F01/cg.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Game</title>
+    <link rel="icon" href="../assets/web_icon.ico" />
     <link rel="stylesheet" href="cg.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
