--- a/F01/reg.html
+++ b/F01/reg.html
@@ -61,7 +61,7 @@
           Register
         </button>
         <br /><br />
-        <a href="index.html" class="btn btn-secondary w-100 py-2" type="button" >Back</a>
+        <a href="home.html" class="btn btn-secondary w-100 py-2" type="button" >Back</a>
         <p class="mt-5 mb-3 text-body-secondary">&copy; 2024–2025</p>
       </form>
     </main>
